--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
     .urgency{position:fixed;top:0;left:0;right:0;background:linear-gradient(90deg,#ff6b35,#ffd700,#4ecdc4);color:#0f0f23;padding:16px 20px;font-weight:bold;font-size:1.3rem;text-align:center;z-index:1002;box-shadow:0 4px 20px rgba(0,0,0,0.4);}
     header{position:fixed;top:68px;left:0;right:0;background:rgba(253,253,251,0.98);padding:20px 20px 18px;text-align:center;z-index:1001;box-shadow:0 6px 20px rgba(0,0,0,0.15);border-bottom:4px solid #ffd700;backdrop-filter:blur(12px);}
-    header img{height:84px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.4));transition:0.5s;}
+    header img{height:84px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.4));transition:.5s;}
     header img:hover{transform:scale(1.15) rotate(6deg);}
 
     .hero{position:relative;min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:220px 20px 140px;background:radial-gradient(circle at 50% 50%, #764ba2 0%, #667eea 60%, #0f0f23 100%);overflow:hidden;}
-    #africa-particles{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1;pointer-events:none;}
+    #africa-particles{position:absolute;inset:0;z-index:1;pointer-events:none;}
     .hero-content{position:relative;z-index:3;max-width:960px;}
-    .hero h1{font-size:clamp(3rem,9vw,5.8rem);margin-bottom:24px;line-height:1.08;text-shadow:0 0 50px rgba(255,215,0,0.9);}
-    .hero p{font-size:1.45rem;max-width:740px;margin:0 auto 32px;opacity:0.96;line-height:1.7;}
+    .hero h1{font-size:clamp(3rem,9vw,5.8rem);margin-bottom:24px;line-height:1.08;text-shadow:0 0 50px rgba(255,215,0,.9);}
+    .hero p{font-size:1.45rem;max-width:740px;margin:0 auto 32px;opacity:.96;line-height:1.7;}
     .motto{font-size:clamp(2.4rem,8vw,4.8rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:40px 0;}
-    .btn{display:inline-block;padding:22px 56px;margin:16px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.5rem;box-shadow:0 15px 40px rgba(255,107,53,0.5);transition:all 0.5s;}
-    .btn:hover{transform:translateY(-12px) scale(1.1);box-shadow:0 30px 70px rgba(255,107,53,0.7);}
+    .btn{display:inline-block;padding:22px 56px;margin:16px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.5rem;box-shadow:0 15px 40px rgba(255,107,53,.5);transition:all .5s;}
+    .btn:hover{transform:translateY(-12px) scale(1.1);box-shadow:0 30px 70px rgba(255,107,53,.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    section{max-width:1160px;margin:140px auto;padding:80px 40px;background:linear-gradient(135deg,rgba(255,255,255,0.13),rgba(255,255,255,0.06));backdrop-filter:blur(24px);border-radius:36px;border:2px solid rgba(255,215,0,0.45);box-shadow:0 30px 90px rgba(0,0,0,0.45), inset 0 0 50px rgba(255,215,0,0.12);opacity:0;transform:translateY(80px);transition:all 1.6s cubic-bezier(0.22,1,0.36,1);}
+    section{max-width:1160px;margin:140px auto;padding:80px 40px;background:linear-gradient(135deg,rgba(255,255,255,.13),rgba(255,255,255,.06));backdrop-filter:blur(24px);border-radius:36px;border:2px solid rgba(255,215,0,.45);box-shadow:0 30px 90px rgba(0,0,0,.45), inset 0 0 0 50px rgba(255,215,0,.12);opacity:0;transform:translateY(80px);transition:all 1.6s cubic-bezier(.22,1,.36,1);}
     section.visible{opacity:1;transform:translateY(0);}
     h2{font-size:3rem;text-align:center;color:#ffd700;margin-bottom:60px;}
     .counter{font-size:clamp(5.5rem,15vw,10rem);font-weight:900;background:linear-gradient(45deg,#00a86b,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;font-variant-numeric:tabular-nums;line-height:1;}
@@ -37,13 +37,13 @@
     .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;}
     .checkmark svg{width:100%;height:100%;}
     .checkmark path{fill:none;stroke:#00a86b;stroke-width:8;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;}
-    .checkmark.visible path{animation:draw 1.2s forwards 0.4s, pulse 2.5s infinite 2s;}
+    .checkmark.visible path{animation:draw 1.2s forwards .4s, pulse 2.5s infinite 2s;}
     @keyframes draw{to{stroke-dashoffset:0;}}
-    @keyframes pulse{0%,100%{transform:scale(1);}50%{transform:scale(1.18);}}
+    @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.18)}}
 
-    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:110px 40px;border-radius:48px;text-align:center;margin:140px auto;box-shadow:0 40px 100px rgba(255,107,53,0.65);opacity:0;transform:scale(0.88);transition:all 1.8s cubic-bezier(0.22,1,0.36,1);}
+    .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:110px 40px;border-radius:48px;text-align:center;margin:140px auto;box-shadow:0 40px 100px rgba(255,107,53,.65);opacity:0;transform:scale(.88);transition:all 1.8s cubic-bezier(.22,1,.36,1);}
     .final-cta.visible{opacity:1;transform:scale(1);}
-    .whatsapp-float{position:fixed;bottom:32px;right:32px;width:72px;height:72px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:38px;box-shadow:0 12px 40px rgba(37,211,102,0.8);z-index:999;animation:float 6s ease-in-out infinite;}
+    .whatsapp-float{position:fixed;bottom:32px;right:32px;width:72px;height:72px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:38px;box-shadow:0 12px 40px rgba(37,211,102,.8);z-index:999;animation:float 6s ease-in-out infinite;}
     @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
   </style>
 </head>
@@ -68,6 +68,7 @@
   </div>
 </div>
 
+<!-- 1. Founding Teachers So Far -->
 <section data-aos="fade-up">
   <h2>Founding Teachers So Far</h2>
   <div class="counter" id="counter">1,247</div>
@@ -77,6 +78,7 @@
   </p>
 </section>
 
+<!-- 2. The Problem -->
 <section data-aos="fade-up">
   <h2>The Problem</h2>
   <p style="text-align:center;font-size:1.7rem;max-width:940px;margin:0 auto 50px;line-height:1.9;">
@@ -95,7 +97,7 @@
   </p>
 </section>
 
-<!-- FULLY RESTORED & PERFECT -->
+<!-- 3. The Solution — Led by You (FULLY RESTORED) -->
 <section data-aos="fade-up">
   <h2>The Solution — Led by You</h2>
   <p style="text-align:center;font-size:1.5rem;max-width:760px;margin:0 auto 60px;line-height:1.8;">
@@ -111,7 +113,7 @@
   <div class="motto" style="margin-top:60px;">Teach Smart, Lead Change</div>
 </section>
 
-<!-- FULLY RESTORED & PERFECT -->
+<!-- 4. What Founding Teachers Gain (FULLY RESTORED) -->
 <section data-aos="fade-up">
   <h2>What Founding Teachers Gain</h2>
   <ul>
@@ -124,6 +126,7 @@
   </ul>
 </section>
 
+<!-- 5. Final CTA -->
 <section class="final-cta">
   <h2 style="font-size:3.8rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2>
   <p style="font-size:1.9rem;max-width:720px;margin:36px auto;">After that, the Founding Alliance closes forever.</p>
@@ -138,20 +141,18 @@
 <script>
   AOS.init({once:true,duration:1600,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Africa particle trails
+  // Africa particle trails + parallax
   const canvas = document.getElementById('africa-particles');
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
-  renderer.setPixelRatio(window.devicePixelRatio);
-  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setPixelRatio(window.devicePixelRatio); renderer.setSize(window.innerWidth, window.innerHeight);
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
   camera.position.z = 2.8;
   const loader = new THREE.SVGLoader();
   loader.load('https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_(orthographic_projection).svg', (data) => {
     const paths = data.paths; const group = new THREE.Group(); const particles = [];
-    paths.forEach((path) => {
-      const shapes = path.toShapes(true);
-      shapes.forEach((shape) => {
+    paths.forEach(path => {
+      path.toShapes(true).forEach(shape => {
         const points = shape.getPoints();
         const geometry = new THREE.BufferGeometry().setFromPoints(points.map(p => new THREE.Vector3(p.x/300 - 1.9, -p.y/300 + 1.3, 0)));
         const material = new THREE.PointsMaterial({color:0x00a86b,size:4.5,transparent:true,opacity:0.9,blending:THREE.AdditiveBlending,depthWrite:false,sizeAttenuation:true});
@@ -160,16 +161,21 @@
       });
     });
     scene.add(group);
-    function animate(){requestAnimationFrame(animate);group.rotation.z+=0.0005;particles.forEach((p,i)=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);renderer.render(scene,camera);}animate();
+    const animate = () => {requestAnimationFrame(animate); group.rotation.z += 0.0005;
+      particles.forEach((p,i)=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
+      renderer.render(scene,camera);
+    }; animate();
   });
   window.addEventListener('scroll',()=>{canvas.style.transform=`translateY(${window.scrollY*0.4}px)`;});
-  window.addEventListener('resize',()=>{camera.aspect=window.innerWidth/window.innerHeight;camera.updateProjectionMatrix();renderer.setSize(window.innerWidth,window.innerHeight);});
+  window.addEventListener('resize',()=>{camera.aspect=window.innerWidth/window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth,window.innerHeight);});
 
   // Counter starts real
   document.getElementById('counter').textContent = '1,247';
 
-  // Section & checkmark animations
-  const observer = new IntersectionObserver((entries)=>{entries.forEach(e=>{if(e.isIntersecting){e.target.classList.add('visible');e.target.querySelectorAll('li').forEach((li,i)=>{setTimeout(()=>{li.classList.add('visible')},i*200);});}});},{threshold:0.2});
+  // Animate sections & checkmarks
+  const observer = new IntersectionObserver(e=>e.forEach(entry=>{if(entry.isIntersecting){entry.target.classList.add('visible');
+    entry.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*200));
+  }}),{threshold:0.2});
   document.querySelectorAll('section, .final-cta').forEach(el=>observer.observe(el));
 </script>
 </body>
