--- a/index.html
+++ b/index.html
@@ -19,20 +19,36 @@
     .hero{position:relative;min-height:100vh;display:flex;align-items:center;justify-content:center;text-align:center;padding:220px 20px 140px;background:radial-gradient(circle at 50% 50%, #764ba2 0%, #667eea 60%, #0f0f23 100%);overflow:hidden;}
     #africa-particles{position:absolute;inset:0;z-index:1;pointer-events:none;}
     .hero-content{position:relative;z-index:3;max-width:960px;}
-    .hero h1{font-size:clamp(3rem,9vw,5.8rem);margin-bottom:24px;line-height:1.08;text-shadow:0 0 50px rgba(255,215,0,.9);}
-    .hero p{font-size:1.45rem;max-width:740px;margin:0 auto 32px;opacity:.96;line-height:1.7;}
+    .hero h1{font-size:clamp(3rem,9vw,5.hero h1{font-size:clamp(3rem,9vw,5.8rem);margin-bottom:24px;line-height:1.08;text-shadow:0 0 50px rgba(255,215,0,.9);}
+    .hero p{font-size:1.45rem;max-width:740px;margin:0 auto 32px;opacity:.98;line-height:1.7;}
     .motto{font-size:clamp(2.4rem,8vw,4.8rem);font-weight:900;background:linear-gradient(45deg,#ffd700,#ff6b35,#4ecdc4);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:40px 0;}
     .btn{display:inline-block;padding:22px 56px;margin:16px;background:linear-gradient(45deg,#ffd700,#ff6b35);color:#0f0f23;font-weight:bold;border-radius:50px;font-size:1.5rem;box-shadow:0 15px 40px rgba(255,107,53,.5);transition:all .5s;}
     .btn:hover{transform:translateY(-12px) scale(1.1);box-shadow:0 30px 70px rgba(255,107,53,.7);}
     .btn-secondary{background:linear-gradient(45deg,#4ecdc4,#00a86b);color:#fff;}
 
-    section{max-width:1160px;margin:140px auto;padding:80px 40px;background:linear-gradient(135deg,rgba(255,255,255,.13),rgba(255,255,255,.06));backdrop-filter:blur(24px);border-radius:36px;border:2px solid rgba(255,215,0,.45);box-shadow:0 30px 90px rgba(0,0,0,.45), inset 0 0 0 50px rgba(255,215,0,.12);opacity:0;transform:translateY(80px);transition:all 1.6s cubic-bezier(.22,1,.36,1);}
+    /* FIXED: Removed broken inset rule that was killing text visibility */
+    section{
+      max-width:1160px;margin:140px auto;padding:80px 40px;
+      background:linear-gradient(135deg,rgba(255,255,255,0.13),rgba(255,255,255,0.06));
+      backdrop-filter:blur(24px);
+      border-radius:36px;
+      border:2px solid rgba(255,215,0,0.45);
+      box-shadow:0 30px 90px rgba(0,0,0,0.45);
+      opacity:0;
+      transform:translateY(80px);
+      transition:all 1.6s cubic-bezier(0.22,1,0.36,1);
+    }
     section.visible{opacity:1;transform:translateY(0);}
+
     h2{font-size:3rem;text-align:center;color:#ffd700;margin-bottom:60px;}
     .counter{font-size:clamp(5.5rem,15vw,10rem);font-weight:900;background:linear-gradient(45deg,#00a86b,#4ecdc4,#ffd700);-webkit-background-clip:text;-webkit-text-fill-color:transparent;text-align:center;font-variant-numeric:tabular-nums;line-height:1;}
 
     ul{list-style:none;max-width:880px;margin:70px auto;}
-    ul li{font-size:1.42rem;margin:42px 0;padding-left:100px;position:relative;line-height:1.8;opacity:0;transform:translateX(-50px);}
+    ul li{
+      font-size:1.42rem;margin:42px 0;padding-left:100px;
+      position:relative;line-height:1.8;color:#ffffff;
+      opacity:0;transform:translateX(-50px);
+    }
     ul li.visible{opacity:1;transform:translateX(0);transition:all 1s ease-out;}
     .checkmark{position:absolute;left:0;top:50%;transform:translateY(-50%);width:62px;height:62px;}
     .checkmark svg{width:100%;height:100%;}
@@ -43,6 +59,7 @@
 
     .final-cta{background:linear-gradient(135deg,#ff6b35,#ffd700);color:#0f0f23;padding:110px 40px;border-radius:48px;text-align:center;margin:140px auto;box-shadow:0 40px 100px rgba(255,107,53,.65);opacity:0;transform:scale(.88);transition:all 1.8s cubic-bezier(.22,1,.36,1);}
     .final-cta.visible{opacity:1;transform:scale(1);}
+
     .whatsapp-float{position:fixed;bottom:32px;right:32px;width:72px;height:72px;background:#25d366;color:#fff;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:38px;box-shadow:0 12px 40px rgba(37,211,102,.8);z-index:999;animation:float 6s ease-in-out infinite;}
     @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-24px)}}
   </style>
@@ -68,7 +85,6 @@
   </div>
 </div>
 
-<!-- 1. Founding Teachers So Far -->
 <section data-aos="fade-up">
   <h2>Founding Teachers So Far</h2>
   <div class="counter" id="counter">1,247</div>
@@ -78,7 +94,6 @@
   </p>
 </section>
 
-<!-- 2. The Problem -->
 <section data-aos="fade-up">
   <h2>The Problem</h2>
   <p style="text-align:center;font-size:1.7rem;max-width:940px;margin:0 auto 50px;line-height:1.9;">
@@ -97,10 +112,9 @@
   </p>
 </section>
 
-<!-- 3. The Solution — Led by You (FULLY RESTORED) -->
 <section data-aos="fade-up">
   <h2>The Solution — Led by You</h2>
-  <p style="text-align:center;font-size:1.5rem;max-width:760px;margin:0 auto 60px;line-height:1.8;">
+  <p style="text-align:center;font-size:1.5rem;max-width:760px;margin:0 auto 60px;line-height:1.8;color:#e0e0ff;">
     Together we are building the first truly African AI curriculum and tools:
   </p>
   <ul>
@@ -113,7 +127,6 @@
   <div class="motto" style="margin-top:60px;">Teach Smart, Lead Change</div>
 </section>
 
-<!-- 4. What Founding Teachers Gain (FULLY RESTORED) -->
 <section data-aos="fade-up">
   <h2>What Founding Teachers Gain</h2>
   <ul>
@@ -126,7 +139,6 @@
   </ul>
 </section>
 
-<!-- 5. Final CTA -->
 <section class="final-cta">
   <h2 style="font-size:3.8rem;color:#fff;">The First 10,000 Teachers Own This Movement</h2>
   <p style="font-size:1.9rem;max-width:720px;margin:36px auto;">After that, the Founding Alliance closes forever.</p>
@@ -141,10 +153,11 @@
 <script>
   AOS.init({once:true,duration:1600,easing:'cubic-bezier(0.22,1,0.36,1)'});
 
-  // Africa particle trails + parallax
+  // Africa glowing particle trails
   const canvas = document.getElementById('africa-particles');
   const renderer = new THREE.WebGLRenderer({canvas, alpha:true, antialias:true});
-  renderer.setPixelRatio(window.devicePixelRatio); renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.setPixelRatio(window.devicePixelRatio);
+  renderer.setSize(window.innerWidth, window.innerHeight);
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(45, window.innerWidth/window.innerHeight, 0.1, 1000);
   camera.position.z = 2.8;
@@ -161,22 +174,43 @@
       });
     });
     scene.add(group);
-    const animate = () => {requestAnimationFrame(animate); group.rotation.z += 0.0005;
-      particles.forEach((p,i)=>p.material.opacity=0.7+Math.sin(Date.now()*0.001+i)*0.3);
+    const animate = () => {
+      requestAnimationFrame(animate);
+      group.rotation.z += 0.0005;
+      particles.forEach((p,i)=>p.material.opacity = 0.7 + Math.sin(Date.now()*0.001 + i)*0.3);
       renderer.render(scene,camera);
-    }; animate();
+    };
+    animate();
   });
-  window.addEventListener('scroll',()=>{canvas.style.transform=`translateY(${window.scrollY*0.4}px)`;});
-  window.addEventListener('resize',()=>{camera.aspect=window.innerWidth/window.innerHeight; camera.updateProjectionMatrix(); renderer.setSize(window.innerWidth,window.innerHeight);});
+
+  // Parallax
+  window.addEventListener('scroll', () => {
+    canvas.style.transform = `translateY(${window.scrollY * 0.4}px)`;
+  });
+
+  // Resize
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
 
   // Counter starts real
   document.getElementById('counter').textContent = '1,247';
 
-  // Animate sections & checkmarks
-  const observer = new IntersectionObserver(e=>e.forEach(entry=>{if(entry.isIntersecting){entry.target.classList.add('visible');
-    entry.target.querySelectorAll('li').forEach((li,i)=>setTimeout(()=>li.classList.add('visible'),i*200));
-  }}),{threshold:0.2});
-  document.querySelectorAll('section, .final-cta').forEach(el=>observer.observe(el));
+  // Animate everything on scroll
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+        entry.target.querySelectorAll('li').forEach((li, i) => {
+          setTimeout(() => li.classList.add('visible'), i * 200);
+        });
+      }
+    });
+  }, {threshold: 0.2});
+
+  document.querySelectorAll('section, .final-cta').forEach(el => observer.observe(el));
 </script>
 </body>
 </html>
